monitoring/envoy-proxy-gatekeeper/manifest.yaml
---
# Source: homelab/charts/envoy-proxy-gatekeeper/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy-gatekeeper
  labels:
    helm.sh/chart: envoy-proxy-gatekeeper-0.1.12
    app.kubernetes.io/name: envoy-proxy-gatekeeper
    app.kubernetes.io/instance: envoy-proxy-gatekeeper
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8080
      protocol: TCP
      name: grpc
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: envoy-proxy-gatekeeper
    app.kubernetes.io/instance: envoy-proxy-gatekeeper
---
# Source: homelab/charts/envoy-proxy-gatekeeper/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy-gatekeeper
  labels:
    helm.sh/chart: envoy-proxy-gatekeeper-0.1.12
    app.kubernetes.io/name: envoy-proxy-gatekeeper
    app.kubernetes.io/instance: envoy-proxy-gatekeeper
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-proxy-gatekeeper
      app.kubernetes.io/instance: envoy-proxy-gatekeeper
  template:
    metadata:
      labels:
        helm.sh/chart: envoy-proxy-gatekeeper-0.1.12
        app.kubernetes.io/name: envoy-proxy-gatekeeper
        app.kubernetes.io/instance: envoy-proxy-gatekeeper
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      serviceAccountName: envoy-proxy-gatekeeper
      securityContext:
        {}
      containers:
        - name: envoy-proxy-gatekeeper
          image: "ghcr.io/kdwils/envoy-proxy-gatekeeper:v0.0.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 8080
              protocol: TCP
            - name: http
              containerPort: 8080
              protocol: TCP
---
# Source: homelab/charts/envoy-proxy-gatekeeper/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatekeeper-int
  labels:
    helm.sh/chart: envoy-proxy-gatekeeper-0.1.12
    app.kubernetes.io/name: envoy-proxy-gatekeeper
    app.kubernetes.io/instance: envoy-proxy-gatekeeper
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "gatekeeper.int.kyledev.co"
    - "gatekeeper.ts.kyledev.co"
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: envoy-proxy-gatekeeper
        port: 8080
